work in progess

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,12 @@ body {
   border-color: black;
   color: white; }
 
+#attack-button:active {
+  -webkit-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.7);
+  -moz-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.7);
+  box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.7);
+  transform: scale(1.03); }
+
 .character {
   display: flex;
   flex-direction: column;
