--- a/sass/base/_type.scss
+++ b/sass/base/_type.scss
@@ -1,3 +1,14 @@
 .character-name{
     font-size: $character-text-size;
 }
+
+.character-health{
+    font-size: $character-text-size;
+}
+
+.main-heading{
+    text-align: center;
+    margin-top: 45px;
+    font-size: 48px;
+    display: block;
+}
