--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,4 +10,4 @@
 //@import "components/button";
 @import "components/fight-area";
 @import "components/characters";
-
+@import "components/overlay";
