--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,15 @@ body {
 .character-name {
   font-size: 2.8rem; }
 
+.character-health {
+  font-size: 2.8rem; }
+
+.main-heading {
+  text-align: center;
+  margin-top: 45px;
+  font-size: 48px;
+  display: block; }
+
 .row {
   max-width: 120rem;
   display: flex;
@@ -48,8 +57,8 @@ body {
   width: 200px; }
 
 .fight-area {
-  display: flex;
-  align-items: center; }
+  align-items: center;
+  display: none; }
 
 #selected-character-section {
   padding-right: 10rem; }
@@ -66,24 +75,28 @@ body {
   width: 10rem;
   height: 10rem;
   border-radius: 200px;
-  transition: ease all .4s;
-  background-color: red;
-  border-color: red; }
+  transition: ease all .5s;
+  background-color: #072083;
+  border-color: #072083;
+  color: white; }
 
 #attack-button:hover {
   transform: scale(1.1);
   -webkit-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.5);
-  background-color: firebrick;
-  border-color: black;
-  color: white; }
+  background-color: #F85B1A;
+  border-color: #F85B1A;
+  color: black; }
 
 #attack-button:active {
   -webkit-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.7);
   -moz-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.7);
   box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.7);
   transform: scale(1.03); }
+
+#attack-button:focus {
+  outline: none; }
 
 .character {
   display: flex;
@@ -108,3 +121,38 @@ body {
   border: black;
   border-style: solid;
   border-width: 1rem; }
+
+.overlay {
+  position: fixed;
+  display: none;
+  /* Hidden by default */
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: radial-gradient(#F85B1A, #072083);
+  z-index: 2; }
+
+.victoryHeading {
+  text-align: center;
+  font-weight: bold; }
+  .victoryHeading--primary {
+    margin-top: 15%;
+    font-size: 5rem; }
+  .victoryHeading--secondary {
+    font-size: 2rem; }
+
+.overlay-lose {
+  position: fixed;
+  display: none;
+  /* Hidden by default */
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: radial-gradient(#F85B1A, #072083);
+  z-index: 2; }
