--- a/sass/components/_fight-area.scss
+++ b/sass/components/_fight-area.scss
@@ -1,6 +1,6 @@
 .fight-area{
-    display: flex;
     align-items: center;
+    display: none;
 }
 
 #selected-character-section{
@@ -21,10 +21,10 @@
     width: 10rem;
     height: 10rem;
     border-radius: 200px;
-    transition: ease all .4s;
-    background-color: red;
-    border-color: red;
-
+    transition: ease all .5s;
+    background-color: #072083;
+    border-color: #072083;
+    color: white;
 }
 
 #attack-button:hover{
@@ -32,9 +32,9 @@
     -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.5);
     -moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.5);
     box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.5);
-    background-color: firebrick;
-    border-color: black;
-    color: white;
+    background-color: #F85B1A;
+    border-color: #F85B1A;
+    color: black;
 }
 
 #attack-button:active{
@@ -42,4 +42,8 @@
     -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.7);
     box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.7);
     transform: scale(1.03);
+}
+
+#attack-button:focus{
+    outline: none;
 }
