--- a/css/style.css
+++ b/css/style.css
@@ -156,3 +156,19 @@ body {
   bottom: 0;
   background: radial-gradient(#F85B1A, #072083);
   z-index: 2; }
+
+.dragon-balls--image {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  margin-top: 40px;
+  animation: pulsate 2s ease infinite forwards; }
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1); }
+  50% {
+    transform: scale(1.15); }
+  100% {
+    transform: scale(1); } }
